@@ -303,6 +303,12 @@ expand_variable (const char *name, const char *file, int line)
 	return Editor;
     else if (strcmp (name, "USER") == 0)
 	return getcaller ();
+    else if (strcmp (name, "SESSIONID") == 0
+	     || strcmp (name, "COMMITID") == 0)
+	/* It's okay to cast out the const below since we know
+	 * it is only ever used read-only in expand_path().
+	 */
+	return (char *)global_session_id;
     else if (isalpha ((unsigned char) name[0]))
     {
 	/* These names are reserved for future versions of CVS,
