@@ -1,3 +1,8 @@
+2005-04-22  Mark D. Baushke  <mdb@cvshome.org>
+
+	* cvs.texinfo (Variables): Document SESSIONID and COMMITID
+	internal variables.
+
 2005-04-18  Derek Price  <derek@ximbiot.com>
 
 	* Makefile.am (EXTRA_DIST): Restore getdate-cvs.texi.
